--- a/style.css
+++ b/style.css
@@ -342,7 +342,7 @@ main{
 			width: 78px;
 			height: 62px;
 			background: url(img/icons-sprite.png);
-			background-position: -10px -0px;;
+			background-position: -10px -0px;
 
 			position: absolute;
 			top:30px;
@@ -418,6 +418,23 @@ main{
 
 		position: relative;
 	}
+	.promo-info-item::after{
+		content: "";
+		display: block;
+		width: 78px;
+		height: 78px;
+		background: url(img/icons-sprite.png);
+
+		position: absolute;
+		top:30px;
+		left: 63.33%;
+	}
+	.promo-info-item.promo-action::after{
+		background-position: -10px -216px;
+	}
+	.promo-info-item.promo-delivery::after{
+		background-position: -10px -67px;
+	}
 	.promo-info-item:last-child{
 			background:#f6b22d;
 			margin-top: 20px;
@@ -459,6 +476,153 @@ main{
 	.product-item{
 		width: 23.404%;
 		border: 1px solid #e5e5e5;
+		overflow: hidden;
+		position: relative;
+		text-align: center;
+	}
+	.product-item img{
+		height: 112px;
+		margin-top: 35px;
+	}
+	.product-item h2{
+		display: inline-block;
+		margin-top: 36px;
+		margin-bottom: 0;
+		width: 80%;
+		font-size: 18px;
+		line-height: 20px;
+	}
+	.old-price{
+		font-weight: 700;
+		font-size: 17px;
+		line-height: 20px;
+		color: #999999;
+		text-decoration: line-through;
+		margin: 0;
+		margin-top: 16px;
+	}
+	.product-new .old-price{
+		visibility: hidden;
+	}
+	.price{
+		display: inline-block;
+		font-size: 17px;
+		line-height: 20px;
+		font-weight: 700;
+		color: white;
+		background: #ee3643;
+		padding: 11.5px 20px 11.5px 35px;
+		margin: 13px 0 20px 0;
+
+		position: relative;
+	}
+	.price::after{
+		content: "";
+		display: block;
+		width: 0;
+		height: 0;
+		border-left: 21.5px solid transparent;
+		border-right: 21.5px solid transparent;
+		border-bottom: 17px solid #ee3643;
+		transform: rotate(90deg);
+
+		position: absolute;
+		top: 13px;
+		right: -30px;
+	}
+
+	.product-item:hover img{
+		visibility: hidden;
+	}
+	.product-item:hover .product-item-btn{
+		display: block;
+	}
+	.product-item:hover{
+		box-shadow: 0px 10px 25px 1px rgba(34, 51, 68, 0.5);
+	}
+	.product-new::before{
+		content: "new";
+		display: block;
+		width: 80px;
+		
+		background: #ee3643;
+		transform: rotate(45deg);
+		text-align: center;
+		color:white;
+		font-family: "Cuprum","Arial",sans-serif;
+		font-size: 14px;
+		padding: 8px 0;
+		overflow: hidden;
+
+		position: absolute;
+		top: -1px;
+		right: -23px;
+	}
+	/*При наведении на продукт (Кнопки)*/
+	.product-item-btn{
+		display: none;
+		width: 100%;
+		height: 85px;
+		text-align: center;
+
+		position: absolute;
+		top: 45px;
+	}
+	.btn-buy,
+	.btn-boockmarks{
+		display: inline-block;
+		text-align: center;
+		border:none;
+		border-radius: 5px;
+		font-family: "Cuprum","Arial",sans-serif;
+		font-size: 14px;
+		line-height: 14px;
+		text-transform: uppercase;
+
+	}
+	.btn-buy{
+		background: #63a63e;
+		box-shadow: 0 3px 0px 0 #367315;
+		padding: 10.5px 45px 10.5px 49px;
+		color: #fff;
+
+		margin-bottom: 7px;
+		position: relative;
+	}
+	.btn-buy::before{
+		content: "";
+		display: block;
+		width: 17px;
+		height: 17px;
+		background: url(img/icons-sprite.png);
+		background-position: -40px -456px;
+		opacity: 0.3;
+		
+		position: absolute;
+		left: 15px;
+		top: 50%;
+		margin-top: -8.5px;
+	}
+	.btn-buy:hover::before{
+		opacity: 1;
+	}
+	.btn-buy:hover{
+		background: #5fbb2d;
+	}
+	.btn-buy:acive{
+		background: #518534;
+	}
+	.btn-boockmarks{
+		border: 3px solid #63a63e;
+		background: none;
+		padding: 10.5px 30px;
+		color: #32425c;
+	}
+	.btn-boockmarks:hover{
+		border-color: #32425c;
+	}
+	.btn-boockmarks:active{
+		opacity: 0.3;
 	}
 /*Популярные производители*/
 .popular-manufactures{
@@ -486,6 +650,9 @@ main{
 	.manufactures-item img{
 		margin: auto;
 		max-width: 100%;
+	}
+	.manufactures-item:hover{
+		box-shadow:0 10px 25px 0.5px rgba(34, 52, 69, 0.5);
 	}
 /*Сервисы*/
 .services{
@@ -726,6 +893,12 @@ input[name="services"]{
 			width: 58.511%;
 			margin-top: 40px;
 		}
+		.right-align a:hover{
+			text-decoration: underline;
+		}
+		.right-align a:active{
+			opacity: 0.5;
+		}
 			.top-right-align{
 				display: flex;
 				justify-content: space-between;
@@ -756,6 +929,7 @@ input[name="services"]{
 			line-height: 24px;
 			font-weight: 500;
 		}
+
 	.bottom-footer{
 		background: #293449;
 		margin-top: 45px;
@@ -779,22 +953,34 @@ input[name="services"]{
 				width: 14.149%;
 				margin-left: 17.021%;
 			}
-				.social .btn-social{
+				.btn-social{
 					font-size: 0;
 					display: inline-block;
 					width: 40px;
 					height: 40px;
 					border-radius: 100px;
 					background: rgba(0, 0, 0, .4);
+					}
+				.btn-social:hover{
+					background: #ee3643;
 				}
-				.btn-social-vk{
-					background-position: -10px -373px;
+				.btn-social::after{
+					content: "";
+					display: block;
+					width: 20px;
+					height: 20px;
+					background: url(img/icons-sprite.png);
+					margin: 0 auto;
+					margin-top: 10px;
 				}
-				.btn-social-fb{
-					background-position: -64px -324px;
+				.btn-social-vk::after{
+					background-position: -10px -368px;
 				}
-				.btn-social-inst{
-					background-position: -37px -482px;
+				.btn-social-fb::after{
+					background-position: -59px -324px;
+				}
+				.btn-social-inst::after{
+					background-position: -35px -481px;
 				}
 			.callback{
 				width: 14.894%;
@@ -807,7 +993,7 @@ input[name="services"]{
 					line-height: 18px;
 				}
 			.developed{
-				width: 14.894%;
+				width: 11.28%;
 				margin-left: auto;
 			}
 				.developed p{
@@ -820,4 +1006,13 @@ input[name="services"]{
 				.yelow-link a{
 					color: #ffd180;
 					text-decoration: none;
+				}
+				.yelow-link:hover,
+				.yelow-link a:hover{
+					text-decoration: underline;
+					cursor: pointer;
+				}
+				.yelow-link:active,
+				.yelow-link a:active{
+					color: #ee3643;
 				}
