--- a/style.css
+++ b/style.css
@@ -1029,15 +1029,16 @@ input[name="services"]{
 /*Модальные окна*/
 .modal-content{
 	position:fixed;
-	top:10px;
+	top:50px;
 	left: 50%;
 	margin-left: -310px;
 	background: #fff;
 	border-top: solid 7px #ee3643;
+	z-index: 1;
 	
 	width:620px;
 	box-sizing: border-box;
-	transform: fadeInUpBig;
+	display: none;
 
 }
 .modal-form{
@@ -1077,6 +1078,9 @@ input[name="services"]{
 	line-height: 22px;
 	margin-bottom: 11px;
 }
+.modal-comment-flx{
+	margin-top: 11px;
+}
 .modal-btn{
 	height: 110px;
 	width: 100%;
@@ -1098,7 +1102,7 @@ input[name="services"]{
 	display: inline-block;
 	width: 50px;
 	height: 50px;
-	background: none
+	background: none;
 }
 .close-form::before,
 .close-form::after{
@@ -1123,13 +1127,95 @@ input[name="services"]{
 	background: #ba2732;
 }
 @keyframes fadeInUpBig {
-  from {
+  0% {
     opacity: 0;
     transform: translate3d(0, 2000px, 0);
   }
 
-  to {
+  100% {
     opacity: 1;
-    transform: none;
+    transform: translate3d(0, -10px, 0);
   }
+}
+@keyframes fadeInUpBig-reverse {
+  0% {
+    opacity: 1;
+    transform: translate3d(0, -10px, 0);
+  }
+
+  100% {
+    opacity: 0;
+    transform: translate3d(0, 2000px, 0);
+  }
+}
+.overlay{
+	position: fixed;
+	top:0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, .4);
+	z-index: 0;
+	display: none;
+}
+.modal-show{
+	display: block;
+	animation: fadeInUpBig 0.4s;
+}
+.modal-show-ov{
+	display: block;
+}
+
+.map-modal{
+	position: fixed;
+	top: 50px;
+	right: 50%;
+	margin-right: -300px;
+	z-index: 1;
+	display: none;
+	box-shadow:0 10px 25px 5px rgba(34, 52, 69, 0.7);
+ 
+	
+}
+.show-map{
+	display: block;
+	animation: fadeInUpBig 0.4s;
+}
+.close-map{
+	position: absolute;
+	right: 0px;
+	top: 0px;
+	font-size: 0;
+	border: none;
+	display: inline-block;
+	width: 50px;
+	height: 50px;
+	background: none;
+
+}
+.close-map::before,
+.close-map::after{
+	content: "";
+	display: block;
+	width: 25px;
+	height: 4px;
+	background: #ee3643;
+	position: absolute;
+	top: 20px;
+	right: 10px;
+	cursor: pointer;
+}
+.close-map::before{
+	transform: rotate(45deg);
+}
+.close-map::after{
+	transform: rotate(-45deg);
+}
+.close-map:hover::before,
+.close-map:hover::after{
+	background: #ba2732;
+}
+.map{
+	cursor: pointer;
+
 }
